@@ -1,6 +1,6 @@
 # Author: Ramon Casero <rcasero@gmail.com>
 # Copyright © 2011 University of Oxford
-# Version: 0.5.7
+# Version: 0.5.8
 # $Rev$
 # $Date$
 #
@@ -53,6 +53,10 @@ INCLUDE_DIRECTORIES(
   )
 TARGET_LINK_LIBRARIES(itk_imfilter
   ${ITK_LIBRARIES})
+
+# add dependency to compiler_config.h, a header file generated by CGAL
+# and only available once CGAL has installed
+add_dependencies(itk_imfilter copy_compiler_config.h)
 
 # ################################################################
 # ## itk_registration()
