@@ -1,5 +1,17 @@
 2013-06-05  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/ItkToolbox/CMakeLists.txt: (0.5.8)
+
+	- add dependency to compiler_config.h, a header file generated by
+	CGAL and only available once CGAL has installed.
+
+	* cpp/src/CMakeLists.txt: (0.2.5)
+
+	- after CGAL builds, we need to copy the header file
+	compiler_config.h it generates to the CGAL include directory, so
+	that it's available for the other sub-projects that use CGAL
+	(e.g. itk_imfilter).
+
 	* matlab/ItkToolbox/CMakeLists.txt: (0.5.7)
 
 	- Update path to CGAL, as we are now using a new version (4.2)
